# uv-audit

./: .gitignore  CHANGELOG.md  README.md  action.yml  main.py  pyproject.toml  requirements.txt  tox.ini
.github/actions/: uv-audit.yml
.github/actions/discover/: action.yml
.github/actions/report/: action.yml  report.py
.github/actions/scan-one/: action.yml
.github/workflows/: bump.yml  publish.yml  scan.yml  test-action.yml  uv-audit.yml  zizmor.yml
scripts/: report.py
src/uv_audit/: __init__.py  aggregate.py  discover.py  environment_handler.py  file_handler.py  pyproject_handler.py  render.py  table_view.py  vulnerability_scanner.py
tests/: test_cli.py  test_environment_handler.py  test_file_handler.py  test_pyproject_handler.py  test_smoke.py  test_table_view.py  test_vulnerability_scanner.py
tests/fixtures/repos/clean/: pyproject.toml
tests/fixtures/repos/monorepo/services/b/: pyproject.toml
tests/test_cli/: conftest.py  test_all_flag_implies_all_groups_and_all_extras.py  test_main_function.py  test_mixed_inputs_warns_and_dispatches_both.py  test_nonexistent_file_path.py  test_positional_project_treated_as_pyproject.py  test_routes_pyproject_through_handle_pyproject.py  test_routes_requirements_through_handle_file.py  test_version_flag.py
tests/test_environment_handler/: test_create_venv.py  test_install_pyproject.py  test_list_packages.py  test_parse_pip_list_to_requirements.py
tests/test_file_handler/: test_handle_file.py  test_handle_pyproject.py  test_report_vulns.py
tests/test_table_view/: test_compute_widths.py
tests/test_vulnerability_scanner/: conftest.py
tests/uv_audit/: test_smoke.py
tests/uv_audit/aggregate/: test_handles_crash_payload.py  test_marks_ignored_vulns.py  test_merges_inputs.py  test_only_ignored_clean_render.py  test_warns_on_dead_ignores.py
tests/uv_audit/cli/: conftest.py  test_all_flag_implies_all_groups_and_all_extras.py  test_directory_path_as_dash_r.py  test_discover_emits_json.py  test_discover_rich_output.py  test_discover_validates_root.py  test_exits_with_message_when_vulns_found.py  test_json_output.py  test_main_function.py  test_mixed_inputs_warns_and_dispatches_both.py  test_no_inputs_exits_with_error.py  test_nonexistent_file_path.py  test_positional_project_treated_as_pyproject.py  test_routes_pyproject_through_handle_pyproject.py  test_routes_requirements_through_handle_file.py  test_unknown_group_exits_with_error.py  test_version_flag.py  test_warns_when_group_flag_used_without_pyproject.py
tests/uv_audit/discover/: test_excludes_glob_patterns.py  test_excludes_path_components.py  test_finds_pyproject_in_subdir.py  test_finds_requirements_variants.py
tests/uv_audit/environment_handler/: test_compile_pyproject.py  test_create_venv.py  test_delete_venv.py  test_init.py  test_install_pyproject.py  test_install_requirements.py  test_list_packages.py  test_parse_compile_to_requirements.py  test_parse_pip_list_to_requirements.py  test_run_command.py
tests/uv_audit/file_handler/: test_handle_file.py  test_handle_pyproject.py  test_report_vulns.py
tests/uv_audit/pyproject_handler/: test_resolve_selection.py
tests/uv_audit/render/: test_renders_clean_when_no_vulns.py  test_renders_collapsible_file_sections.py  test_renders_dash_for_empty_link.py  test_renders_ignored_section.py  test_renders_omits_empty_findings_line.py  test_renders_scanned_files_in_clean_body.py  test_renders_scanned_files_section.py  test_renders_summary_line.py
tests/uv_audit/table_view/: test_compute_widths.py  test_format_row.py  test_print_simple_table.py
tests/uv_audit/vulnerability_scanner/: conftest.py  test_get_package_url.py  test_run_check.py
uv_audit/: __init__.py  environment_handler.py  file_handler.py  table_view.py  vulnerability_scanner.py
