[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uv-audit2"
version = "0.2.0"
description = "A pip-audit like tool for auditing Python packages in requirements files."
authors = [
    {name = "SpielerNogard", email = "christophermueller2@outlook.de"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.8.0",
    "typer==0.17.3",
    "rich==14.1.0",
]

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-cov==6.1.1", "pytest-mock==3.14.1"]
dev-tools = ["ruff==0.15.8", "pyright==1.1.408"]
linting = [{ include-group = "dev-tools" }, "commitizen==4.13.9"]
mkdocs = ["mkdocs-material==9.7.0", "mkdocstrings[python]==0.29.1"]
codequality = ["lizard==1.21.3"]
sonar = ["pysonar==1.5.0.4793"]

[project.scripts]
uv-audit = "uv_audit:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# for more rules: https://docs.astral.sh/ruff/rules/
select = [
  "A",     # flake8-builtins
  "B",     # flake8-bugbear
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "C90",   # mccabe complexity
  "E",     # pycodestyle error
  "F",     # pyflakes
  "FAST",  # fastapi
  "I",     # isort
  "N",     # pep8-naming
  "PERF",  # Perflint
  "PIE",   # flake8-pie
  "PLR",   # pylint refactor
  "PT",    # flake8-pytest-style
  "PYI",   # flake8-pyi
  "RUF",   # ruff
  "SIM",   # flake8-simplify
  "UP",    # pyupgrade
  "W",     # pycodestyle warnings
]
ignore = [
  "B904",   # raise-without-from-inside-except
  "PIE790", # unnecessary-placeholder
  "SIM102", # collapsible-if
  "SIM117", # multiple-with-statements
]

[tool.ruff.lint.mccabe]
max-complexity = 10 # ISO 25010 audit threshold: max 10 McCabe per unit

[tool.ruff.lint.pylint]
max-branches = 10
max-statements = 30

[tool.ruff.lint.per-file-ignores]
# CLI entry point: typer forces many arguments and a single dispatch function
"src/uv_audit/__init__.py" = ["PLR0913", "PLR0912", "PLR0915", "C901"]
# Test files: long descriptive docstrings and assertion messages may exceed 88 chars
"tests/**/*.py" = ["E501", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["bbase_iac"]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
bump_message = "bump: $current_version → $new_version [skip-ci]"
version_files = [
    "src/uv_audit/__init__.py",
    "action.yml:default: \"\\d+\\.\\d+\\.\\d+\"  # x-cz-version",
    ".github/workflows/scan.yml:default: \"\\d+\\.\\d+\\.\\d+\"  # x-cz-version",
    ".github/workflows/scan.yml:@\\d+\\.\\d+\\.\\d+ # zizmor",
]
